file clean, cursor changes